RDCC-4453: addressing Sonar Issues in OrganisationMinimalInfoResponse.java